| Bug #47908 | FragmentLogFileSize > 256M leads to 'Error while reading the REDO' | ||
|---|---|---|---|
| Submitted: | 8 Oct 8:22 | Modified: | 8 Oct 16:48 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[8 Oct 8:22]
Jonas Oreland
[8 Oct 8:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/86084 3094 Jonas Oreland 2009-10-08 ndb - bug#47908 - store mbyte pos as Uint16 to allow >256M FragmentLogFileSize
[8 Oct 9:20]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091008064805-o2ynb0nm61dq9e63) (version source revid:jonas@mysql.com-20091008064805-o2ynb0nm61dq9e63) (merge vers: 5.1.39-ndb-7.1.0) (pib:11)
[8 Oct 9:55]
Jonas Oreland
pushed to 6.3.28 and 7.0.9
[8 Oct 16:48]
Jon Stephens
Documented bugfix in the NDB-6.3.28 and 7.0.9 changelogs as follows:
Setting FragmentLogFileSize to a value greater than 256 MB led
to errors when trying to read the redo log file.
Closed.
