ndb - bug#47908 - store mbyte pos as Uint16 to allow >256M FragmentLogFileSize